refactor: remover código morto e refatorar módulos